:sparkles: edited hobbies section, made new bug with nav buttons on tiny screens overlapping bc of padding

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ a:hover {
 	opacity: 60%;
 }
 
-.background-box a {
+.background-box .nav-button {
 	padding: 8px;
 }
 
